Update gateway CORS and post with subreddit